# cmd_rust_sols

./: README.md
echor/: Cargo.toml
echor/src/: main.rs
echor/tests/: cli.rs
